# privatechef

./: .cargo-watch.toml  .gitignore  Cargo.toml  dev.sh
docs/: MENU_ITEMS_API.md
migrations/: 001_create_users.sql  002_create_examples.sql  003_create_chefs.sql  004_create_menus.sql  005_create_menu_items.sql  006_create_bookings.sql  007_add_user_roles.sql  008_add_quantity_to_menu_items.sql
scripts/: make_admin.rs  make_admin.sql  quick_test.sh  test_full_workflow.sh  test_menu_items.sh
src/: config.rs  errors.rs  lib.rs  main.rs  templates.rs  utils.rs
src/cache/: mod.rs  session.rs
src/db/: mod.rs  pool.rs
src/handlers/: auth.rs  booking.rs  chef.rs  example.rs  menu.rs  menu_item.rs  mod.rs  web.rs
src/middleware/: auth.rs  cors.rs  mod.rs  roles.rs
src/models/: booking.rs  chef.rs  example.rs  menu.rs  menu_item.rs  mod.rs  user.rs
src/routes/: api.rs  auth.rs  mod.rs  web.rs
templates/: base.html  chef_dashboard.html  dashboard.html  home.html  login.html
tests/: menu_items_test.rs  roles_test.rs
