[package]
name = "privatechefspace-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "make_admin"
path = "scripts/make_admin.rs"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
slug = "0.1"
validator = { version = "0.18", features = ["derive"] }
actix-cors = "0.6"
actix-web-httpauth = "0.8"
askama = { version = "0.12", features = ["serde-json"] }
urlencoding = "2.1"

